# r-type

./: .gitignore  CMakeLists.txt  README.md  configure.sh
client/: CMakeLists.txt
client/header/: client.h
client/src/: client.cpp
server/: CMakeLists.txt
server/header/: server.h
server/src/: server.cpp
